CHANGES
=======

* Added support for error handlers with initial support for sentry.io
* Fixed not working templating in the URL, extended the syntax and covered with tests
* Increased tests coverage for value objects: PositiveNumber
* Increasing tests coverage
* Fixed deploy conditions
* Update .travis.yml

v2.0.3
------

* Added deploy credentials
* Fixes to the build
* Fixes to the build
* Changed requirements for the Python version to 3.6 from 3.7, as it is built and works on 3.6
* Bahub release job
* Fixed before\_deploy
* Travis: Added nightly pipeline
* Travis: Fixed Bahub functional build
* Travis: Clean up
* Travis: Removed Python 3.8 tests as Python 3.8 cannot be launched on travis at now
* Travis: Clean up
* Travis: Split into multiple jobs
* Travis: debug
* Fixed "kill\_test\_containers" task
* Travis: build stabilization
* Covered Checksum valueobject with tests
* Travis: build stabilization
* Set /bin/bash as default shell for all executed commands (because /bin/sh does not support same options as bash eg. pipefail)
* Travis: build stabilization
* Added snapshot functionality
* Added coverage badge
* Added coverage for Python part
* Added codecov.io integration
* Added coverage logging
* Bahub: Added DNS configuration
* Trying to repair travis build
* Added openssl to the travis build
* Added support for Sentry tool - see sentry.io, it's a tool to catch exceptions on production
* Covered additional case - when encryption configuration is returning bad exit code
* Covered generally backup handlers. The tests are detecting if the failures are properly detected eg. when command pipeline fails
* Cleaned up unit tests warnings by closing the stream with f.close() even when in YAML parser there is an exception
* General improvements for error detection on the pipelining process
* [https://github.com/riotkit-org/file-repository/issues/60] Partially resolved the issue by added upload validation (in \_validate\_running\_command())